--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
   },
   "homepage": "https://github.com/kushal201/kushal-react#readme",
   "devDependencies": {
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
+    "@testing-library/react": "^15.0.2",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
     "postcss": "^8.4.35",
     "process": "^0.11.10",
     "tailwindcss": "^3.4.1"
@@ -37,8 +42,6 @@
     "react-router-dom": "^6.21.1"
   },
   "browserslist": [
-    "last 10 versions of Edge",
-    "last 10 versions of Chrome"
   ],
   "main": "index.js"
 }
