--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
   "devDependencies": {
     "@babel/core": "^7.24.4",
     "@babel/preset-env": "^7.24.4",
+    "@babel/preset-react": "^7.24.1",
+    "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.2",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.35",
     "process": "^0.11.10",
     "tailwindcss": "^3.4.1"
@@ -41,7 +44,6 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.1"
   },
-  "browserslist": [
-  ],
+  "browserslist": [],
   "main": "index.js"
 }
