--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "firebase": "^10.14.0",
     "parcel": "^2.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.1"
   },
